--- a/ang-blog-dashboard/package.json
+++ b/ang-blog-dashboard/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
+    "@angular/animations": "^16.2.12",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
@@ -21,6 +21,7 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
