--- a/ang-blog-dashboard/package.json
+++ b/ang-blog-dashboard/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@syncfusion/ej2-angular-documenteditor": "^24.1.41",
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
     "ngx-toastr": "^18.0.0",
