--- a/ang-blog-dashboard/package.json
+++ b/ang-blog-dashboard/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@syncfusion/ej2-angular-documenteditor": "^24.1.41",
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
+    "font-awesome": "^4.7.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
